env/code_53bf019877222/stderr.txt
Traceback (most recent call last):
  File "main.py", line 4, in <module>
    a=input()
  File "<string>", line 1
    0 3 8 5 12
      ^
SyntaxError: invalid syntax
